--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -41,6 +41,11 @@ patches:
   target:
     kind: Deployment
 
+images:
+  - name: controller
+    newTag: main
+    newName: ghcr.io/miscord-dev/dexchange
+
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
 #- path: manager_webhook_patch.yaml
