--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -13,6 +13,12 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - serviceaccounts/token
+  verbs:
+  - create
+- apiGroups:
   - dexchange.miscord.win
   resources:
   - dextokens
